Use QueuedConnection to work around recursion (backport r1084371)

This "fixes" the upstream bug, and should probably be reverted
when the real cause of the recursion is fixed.

BUG: 225025

svn path=/branches/KDE/4.4/kdelibs/; revision=1084374